# gomoku

./: CMakeLists.txt  main.c
src/: board.c  board.h
src/move/: evaluate.c  evaluate.h  move.c  move.h
src/rules/: captures.c  captures.h  free_threes.c  free_threes.h  has_won_the_game.c  has_won_the_game.h
